load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "impl",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resource_files = glob(["src/main/res/**"]),
    custom_package = "com.morfly.sample.data.impl",
    manifest = "src/main/AndroidManifest.xml",
    exports = ["//data/api"],
    visibility = ["//app:__pkg__"],
    deps = [
        "//common",
        "//data/api",
        "//:dagger",
        artifact("androidx.core:core-ktx"),
        artifact("androidx.appcompat:appcompat"),
        artifact("com.google.android.material:material"),
        artifact("com.squareup.retrofit2:retrofit"),
        artifact("com.squareup.retrofit2:converter-moshi"),
        artifact("com.squareup.okhttp3:logging-interceptor"),
        artifact("com.squareup.moshi:moshi-kotlin"),
        artifact("androidx.room:room-runtime"),
        artifact("androidx.room:room-ktx"),
        artifact("androidx.paging:paging-runtime-ktx"),
        artifact("androidx.sqlite:sqlite-framework"),
        "//tools:androidx_room_room_compiler_library",
    ],
)