load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_android_library(
    name = "api",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resource_files = glob(["src/main/res/**"]),
    custom_package = "com.morfly.sample.profile",
    manifest = "src/main/AndroidManifest.xml",
    plugins = ["//tools:jetpack_compose_compiler_plugin"],
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        artifact("androidx.compose.runtime:runtime"),
        artifact("androidx.core:core-ktx"),
        artifact("androidx.appcompat:appcompat"),
        artifact("com.google.android.material:material"),
        artifact("androidx.compose.ui:ui"),
        artifact("androidx.compose.ui:ui-tooling"),
        artifact("androidx.compose.material:material"),
        artifact("androidx.activity:activity-compose"),
        artifact("androidx.navigation:navigation-compose"),
    ],
)